--- a/Filterer/Base.lproj/Main.storyboard
+++ b/Filterer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -97,6 +97,11 @@
                         <outlet property="SIV" destination="7ic-Mg-cEo" id="m5u-hn-uRt"/>
                         <outlet property="Sec" destination="P3t-tL-eTi" id="EoS-Qg-cj6"/>
                         <outlet property="bottomMenu" destination="bli-5K-jkH" id="8ih-vc-cy3"/>
+                        <outlet property="btnBW" destination="EgN-1l-7Pf" id="s1g-Fa-qW2"/>
+                        <outlet property="btnBlue" destination="aPC-F9-hbE" id="YbW-vL-VY6"/>
+                        <outlet property="btnCartoon" destination="doY-c3-21K" id="I4J-U4-oVI"/>
+                        <outlet property="btnInverse" destination="j18-wr-Tky" id="BJc-uc-z9u"/>
+                        <outlet property="btnSepia" destination="qtC-Gb-YR8" id="4II-rY-68w"/>
                         <outlet property="filterBtn" destination="064-Aw-vSH" id="JM0-Cn-Jm4"/>
                         <outlet property="imageView" destination="7ic-Mg-cEo" id="Jwn-oF-jlq"/>
                         <outlet property="secondaryMenu" destination="P3t-tL-eTi" id="QUT-FT-JPM"/>
